# silkpre

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: codeql.yml
cmake/: toolchain.cmake
cmake/Hunter/: config.cmake
lib/: CMakeLists.txt
lib/silkpre/: blake2b.h  ecdsa.c  ecdsa.h  precompile.cpp  precompile.h  rmd160.c  rmd160.h  secp256k1n.cpp  secp256k1n.hpp  sha256.c  sha256.h  snark.cpp  snark.hpp  y_parity_and_chain_id.cpp  y_parity_and_chain_id.hpp
silkpre/: blake2b.c  blake2b.h  rmd160.c  rmd160.h  sha256.c  snark.cpp  snark.hpp
test/: CMakeLists.txt  benchmark.cpp  hex.cpp  hex.hpp  main.c  precompile_test.cpp  sha256_test.cpp  unit_test.cpp  y_parity_and_chain_id_test.cpp
